--- a/templates/users/edit.html.twig
+++ b/templates/users/edit.html.twig
@@ -21,7 +21,7 @@
             } %}
 
             {% include '@bolt/_partials/fields/text.html.twig' with {
-                'label' : 'label.displayname'|trans,
+                'label' : 'label.display_name'|trans,
                 'name' : 'displayName',
                 'value' : user.displayName,
                 'disabled' : false,
