Adding bootstrap-vue scss first

--- a/assets/scss/bolt.scss
+++ b/assets/scss/bolt.scss
@@ -1,4 +1,5 @@
 @import './vendor/bootstrap/bootstrap';
+@import './vendor/bootstrap-vue/bootstrap-vue';
 @import './init/init';
 @import './vendor/vendor';
 @import './layout/layout';
