Adding all styles/classes for toolbar, disabling old

--- a/assets/scss/bolt.scss
+++ b/assets/scss/bolt.scss
@@ -1,6 +1,9 @@
+@import './themes/default';
 @import './vendor/bootstrap/bootstrap';
 @import './vendor/bootstrap-vue/bootstrap-vue';
-@import './init/init';
+
+/* old */
+/*@import './init/init';
 @import './vendor/vendor';
 @import './layout/layout';
-@import './modules/modules';
+@import './modules/modules';*/
