New svg icon as brand placeholder

--- a/assets/scss/themes/default.scss
+++ b/assets/scss/themes/default.scss
@@ -64,9 +64,9 @@ $enable-gradients: false;
 
 // Toolbar
 .svg-brand {
-  width: 1.3rem; 
+  width: 1.3rem;
   height: auto;
-  margin-top: -0.2rem;
+  background-image: url('../../static/brand/bolt4-icon.svg');
 }
 
 // Sidebar
