Use default filter instead of is defined in Twig

--- a/public/theme/skeleton/index.twig
+++ b/public/theme/skeleton/index.twig
@@ -2,7 +2,7 @@
 
 {% block main %}
 
-    {% if record is defined %}
+    {% if record|default %}
 
         <h1><a href="{{ record|link }}">{{ record|title }}</a></h1>
 
