Ninja-fixing `z-index` clashes

--- a/assets/scss/init/_variables.scss
+++ b/assets/scss/init/_variables.scss
@@ -8,4 +8,4 @@ $bolt-blue: #255687; // Nice and bright, pretty light
 $bolt-bluegray: #2F3E4D; // Nice dark and desaturated
 $bolt-saturated: #003E7C; // Very saturated. Use with care
 
-
+$big-z-index: 1000;
