--- a/assets/scss/modules/listing/row/_container.scss
+++ b/assets/scss/modules/listing/row/_container.scss
@@ -5,6 +5,7 @@
   width: 100%;
   z-index: $big-z-index;
 
+  // We raise the z-index by 1, to make sure the "Edit" dropdown is on top
   &:hover {
     z-index: $big-z-index + 1;
   }
@@ -14,14 +15,12 @@
   }
 
   &.is-dashboard {
-    .listing__row,
-    .quickedit__row {
+    .listing__row{
       width: 100%;
     }
   }
 
-  .listing__row,
-  .quickedit__row {
+  .listing__row {
     width: calc(100% - #{$checkbox-row-width});
   }
 }
