--- a/templates/_partials/fields/_base.html.twig
+++ b/templates/_partials/fields/_base.html.twig
@@ -45,7 +45,7 @@
 {% if not value|default %}
     {% set value = field.value|default('') %}
     {% if value is iterable %}
-        {% set value = field.__toString() %}
+        {% set value = value|first %}
     {% endif %}
 {% endif %}
 
