--- a/templates/pages/placeholder.html.twig
+++ b/templates/pages/placeholder.html.twig
@@ -22,6 +22,25 @@
         Omnis enim est natura diligens sui. Duo Reges: constructio interrete.
     </p>
 
+    <div class="alert alert-primary" role="alert">
+        A simple primary alert—check it out!
+    </div>
+    <div class="alert alert-secondary" role="alert">
+        A simple secondary alert—check it out!
+    </div>
+    <div class="alert alert-success" role="alert">
+        A simple success alert—check it out!
+    </div>
+    <div class="alert alert-danger" role="alert">
+        A simple danger alert—check it out!
+    </div>
+    <div class="alert alert-warning" role="alert">
+        A simple warning alert—check it out!
+    </div>
+    <div class="alert alert-info" role="alert">
+        A simple info alert—check it out!
+    </div>
+
     <section class="buttons">
         <h1>Buttons</h1>
 
