--- a/assets/scss/layout/_admin.scss
+++ b/assets/scss/layout/_admin.scss
@@ -1,5 +1,7 @@
 //** Layout | Admin
 
+// Note: Override for "Wide content" is below
+
 $admin-toolbar-height: 36px;
 $admin-sidebar-width: 200px;
 $admin-aside-width: 320px;
@@ -102,5 +104,15 @@ $admin-header-height: 70px;
       grid-area: aside;
       width: $admin-aside-width;
     }
+  }
+}
+
+.widecontent {
+
+  .admin__body--container {
+    display: grid;
+    grid-template-columns: auto 0;
+    grid-template-areas: "main";
+    padding: $spacer * 2;
   }
 }
