--- a/templates/pages/placeholder.html.twig
+++ b/templates/pages/placeholder.html.twig
@@ -17,9 +17,10 @@
 
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Torquatus, is qui consul
-        cum Cn. Tum ille timide vel potius verecunde: Facio, inquit. Quae sequuntur igitur?
-        Sunt enim prima elementa naturae, quibus auctis vírtutis quasi germen efficitur.
+        cum Cn. <strong>Tum ille timide</strong> vel potius verecunde: Facio, inquit. Quae sequuntur igitur?
+        Sunt enim prima <em>elementa naturae</em>, quibus auctis vírtutis quasi germen efficitur.
         Omnis enim est natura diligens sui. Duo Reges: constructio interrete.
+        <code>Quid, de quo nulla dissensio est?</code> Sed nunc, quod agimus;
     </p>
 
     <div class="alert alert-primary" role="alert">
