--- a/templates/finder/_quickselect.html.twig
+++ b/templates/finder/_quickselect.html.twig
@@ -1,14 +1,21 @@
 {% if allfiles|default() %}
 
-<div class="row mb-3">
-        <div class="selectize-control selectize form-control single">
+<div class="row">
+    <div class="col-md-auto align-self-end">
+        <p style="margin-top: 0.75rem">Select a file:</p>
+    </div>
+    <div class="col">
+        <div class="selectize-control selectize form-control single" style="min-height: 3rem;">
             <select name="quickselect" id="quickselect" placeholder="{{ 'form.quick_select_file'|trans }}">
             </select>
         </div>
+    </div>
 </div>
+
 
 <script>
     document.addEventListener("DOMContentLoaded", function() {
+
         $('#quickselect').selectize({
             create: false,
             sortField: 'text',
@@ -16,7 +23,6 @@
             searchField: ['value', 'description'],
             closeAfterSelect: true,
             onChange: function(value) {
-              console.log('item', value);
               window.location = value;
             },
             options: [
@@ -27,11 +33,11 @@
             render: {
                 option: function(item) {
                     return "<div class='option'>" +
-                        item.filename + " <small> " + item.description + " </small></div>";
+                        item.filename + " <small> - " + item.description + " </small></div>";
                 },
                 item: function(item) {
                     return "<div class='option'>" +
-                        item.filename + " <small> " + item.description + " </small></div>";
+                        item.filename + " <small> - " + item.description + " </small></div>";
                 }
             }
         });
