Revert unneeded commit

--- a/templates/bundles/ApiPlatformBundle/SwaggerUi/index.html.twig
+++ b/templates/bundles/ApiPlatformBundle/SwaggerUi/index.html.twig
@@ -24,6 +24,7 @@
 
 {% block stylesheets %}
 {{ parent() }}
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Source+Code+Pro:300,600|Titillium+Web:400,600,700">
 <link rel="stylesheet" href="{{ asset('bundles/apiplatform/swagger-ui/swagger-ui.css') }}">
 
 {# json_encode(65) is for JSON_UNESCAPED_SLASHES|JSON_HEX_TAG to avoid JS XSS #}
