Allow widgets to return `null` if they fail, and the results shouldn't be cached.

--- a/templates/widgets/weather.twig
+++ b/templates/widgets/weather.twig
@@ -2,8 +2,8 @@
     <div class="image card-img-top"
          style="background-image: url(https://source.unsplash.com/400x240/?{{ weather.5|url_encode }}); height: 200px; padding-top: 60px;">
         <center style='text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6); color: #FFF;'>
-            <span style="font-size: 200%;">{{ weather.0 }} {{ weather.1 }} {{ weather.3 }}</span><br>
-            <span style="font-size: 100%; margin-top: 0.5rem;">
+            <span style="font-size: 175%; line-height: 1.75rem;">{{ weather.0 }} {{ weather.1 }} {{ weather.3 }}</span><br>
+            <span style="font-size: 100%;">
                 {{ weather.5 }}<br>
                 {{ weather.6 }} / {{ weather.8 }} / {{ weather.2 }} / {{ weather.9 }}
             </span>
