--- a/public/theme/skeleton/partials/_sub_field_blocks.twig
+++ b/public/theme/skeleton/partials/_sub_field_blocks.twig
@@ -1,28 +1,23 @@
 {# Sub-block for 'text' field such as 'text', 'textarea', or 'html' #}
 {% block text_field %}
-    <div data-bolt-field="{{ value.name }}">
+    <div data-bolt-field="{{ field.name }}">
         {%- autoescape false -%}
-            {# If 'allowtwig' is true for this field, we'll need to parse it as Twig here. #}
-            {#{% if allowtwig %}#}
-                {#{{ include(template_from_string(value)) }}#}
-            {#{% else %}#}
-                {{ value }}
-            {#{% endif -%}#}
+            {{ field.twigValue() }}
         {%- endautoescape -%}
     </div>
 {% endblock %}
 
 {# Sub-block for Markdown fields #}
 {% block markdown_field %}
-    <div data-bolt-field="{{ value.name }}">
-        {{ value|markdown }}
+    <div data-bolt-field="{{ field.name }}">
+        {{ field.twigValue() }}
     </div>
 {% endblock %}
 
 {# Sub-block for 'imagelist' fields #}
 {% block imagelist_field %}
     <div class="bolt-imagelist">
-        {% for image in value %}
+        {% for image in field %}
             <div class="bolt-imageholder">
                 {{ popup(image.filename, 200, 0) }}
             </div>
@@ -34,25 +29,25 @@
 {% block common_fields %}
 
     {# HTML, Textarea, Text fields #}
-    {% if fieldtype in ['html', 'textarea', 'text'] %}
-        {% set tag = (value.name in ['title', 'name', 'caption', 'subject', 'heading']) ? 'h3' : 'p' %}
+    {% if type in ['html', 'textarea', 'text'] %}
+        {% set tag = (field.name in ['title', 'name', 'caption', 'subject', 'heading']) ? 'h3' : 'p' %}
         <{{tag}}>{{ block('text_field') }}</{{tag}}>
     {% endif %}
 
     {# Markdown fields #}
-    {% if fieldtype == 'markdown' %}
+    {% if type == 'markdown' %}
         {{ block('markdown_field') }}
     {% endif %}
 
     {# Image fields #}
-    {% if fieldtype == "image" and value is not empty %}
-        {{ value|showimage('684') }}
+    {% if type == "image" and field is not empty %}
+        {{ field|showimage('684') }}
     {% endif %}
 
     {# Video fields #}
-    {% if fieldtype == "video" and value.responsive|default is not empty %}
-        <div class="flex-video {{ value.ratio|default(1) > 1.5 ? 'widescreen' }}">
-            {{ value.responsive }}
+    {% if type == "video" and field.responsive|default is not empty %}
+        <div class="flex-video {{ field.ratio|default(1) > 1.5 ? 'widescreen' }}">
+            {{ field.responsive }}
         </div>
     {% endif %}
 
@@ -62,35 +57,35 @@
 {% block extended_fields %}
 
     {# Geolocation field #}
-    {% if fieldtype == "geolocation" and value.latitude|default is not empty %}
-        <img src="http://maps.googleapis.com/maps/api/staticmap?center={{ value.latitude }},{{ value.longitude }}&amp;zoom=14&amp;size=617x300&amp;sensor=false&amp;markers={{ value.latitude }},{{ value.longitude }}">
+    {% if type == "geolocation" and field.latitude|default is not empty %}
+        <img src="http://maps.googleapis.com/maps/api/staticmap?center={{ field.latitude }},{{ field.longitude }}&amp;zoom=14&amp;size=617x300&amp;sensor=false&amp;markers={{ field.latitude }},{{ field.longitude }}">
     {% endif %}
 
-    {# Special case for 'select' fields: if it's a multiple select, the value is an array. #}
-    {% if fieldtype == "select" and value is not empty %}
-        <p><strong>{{ value.definition.label|default(value.name) }}: </strong>
-            {{ dump(value) }}
+    {# Special case for 'select' fields: if it's a multiple select, the field is an array. #}
+    {% if type == "select" and field is not empty %}
+        <p><strong>{{ field.definition.label|default(field.name) }}: </strong>
+            {{ dump(field) }}
         </p>
     {% endif %}
 
     {# Checkbox fields #}
-    {% if fieldtype == "checkbox" %}
-        <p><strong>{{ value.definition.label|default(value.name) }}</strong>: {{ value ? "checked" : "not checked" }}</p>
+    {% if type == "checkbox" %}
+        <p><strong>{{ field.definition.label|default(field.name) }}</strong>: {{ field ? "checked" : "not checked" }}</p>
     {% endif %}
 
     {# Imagelist fields #}
-    {% if fieldtype == "imagelist" and value is not empty %}
+    {% if type == "imagelist" and field is not empty %}
         {{ block('imagelist_field') }}
     {% endif %}
 
     {# No special case defined for this type of field. We just output them, if it's
        a simple scalar, and 'dump' them otherwise. #}
-    {% if fieldtype in [ 'filelist', 'datetime', 'date', 'integer', 'float' ] and value is not empty  %}
-        <p><strong>{{ value.definition.label|default(value.name) }}: </strong>
-        {% if value is iterable %}
-            {{ dump(value) }}
+    {% if type in [ 'filelist', 'datetime', 'date', 'integer', 'float' ] and field is not empty  %}
+        <p><strong>{{ field.definition.label|default(field.name) }}: </strong>
+        {% if field is iterable %}
+            {{ dump(field) }}
         {% else %}
-            {{ value }}
+            {{ field }}
         {% endif %}
         </p>
     {% endif %}
