--- a/templates/_partials/fields/_base.html.twig
+++ b/templates/_partials/fields/_base.html.twig
@@ -44,7 +44,7 @@
 {# Set the value #}
 {% if not value|default %}
     {% set value = field.value|default('') %}
-    {% if value is iterable %}
+    {% if value is iterable and field.definition.type != "select" %}
         {% set value = value|first %}
     {% endif %}
 {% endif %}
