Clean up SCSS structure

--- a/assets/scss/modules/base/_notification.scss
+++ b/assets/scss/modules/base/_notification.scss
@@ -1,5 +1,6 @@
 // Base | Notifications
 
+// This positions Bootstrap's notifications in the bottom right corner.
 .admin__notifications {
   display: block;
   -webkit-backface-visibility: hidden;
