--- a/templates/pages/placeholder.html.twig
+++ b/templates/pages/placeholder.html.twig
@@ -1,5 +1,3 @@
-{# Page: Footer > About #}
-
 {% extends '@bolt/_base/layout.html.twig' %}
 {% import '@bolt/_macro/_macro.html.twig' as macro %}
 
@@ -11,10 +9,6 @@
 
     <h2>{{ title }}</h2>
 
-    {% if subtitle|default() %}
-        <h3>{{ subtitle }}</h3>
-    {% endif %}
-
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Torquatus, is qui consul
         cum Cn. <strong>Tum ille timide</strong> vel potius verecunde: Facio, inquit. Quae sequuntur igitur?
@@ -23,77 +17,8 @@
         <code>Quid, de quo nulla dissensio est?</code> Sed nunc, quod agimus;
     </p>
 
-    <div class="alert alert-primary" role="alert">
-        A simple primary alert—check it out!
-    </div>
-    <div class="alert alert-secondary" role="alert">
-        A simple secondary alert—check it out!
-    </div>
-    <div class="alert alert-success" role="alert">
-        A simple success alert—check it out!
-    </div>
-    <div class="alert alert-danger" role="alert">
-        A simple danger alert—check it out!
-    </div>
-    <div class="alert alert-warning" role="alert">
-        A simple warning alert—check it out!
-    </div>
-    <div class="alert alert-info" role="alert">
-        A simple info alert—check it out!
-    </div>
-
-    <section class="buttons">
-        <h1>Buttons</h1>
-
-            {{ macro.button('action.save', 'fa-save', 'primary', 'button', '') }}
-            {{ macro.button('action.save', 'fa-save', 'secondary', 'button', '') }}
-            {{ macro.button('action.save', 'fa-save', 'tertiary', 'button', '') }}
-            {{ macro.button('action.save', 'fa-save', 'success', 'button', '') }}
-            {{ macro.button('action.save', 'fa-save', 'danger', 'button', '') }}
-            {{ macro.button('action.save', 'fa-save', 'warning', 'button', '') }}
-            {{ macro.button('action.save', 'fa-save', 'info', 'button', '') }}
-            {{ macro.button('action.save', 'fa-save', 'light', 'button', '') }}
-            {{ macro.button('action.save', 'fa-save', 'dark', 'button', '') }}
-            {{ macro.button('action.save', 'fa-save', 'link', 'button', '') }}
-
-        <hr>
-    </section>
-
-
-    <section class="fields">
-        <h1>Fields</h1>
-
-        <form method="post" id="editor">
-
-        {# a field with _no_ options, all defaults/fallbacks #}
-        {% include '@bolt/_partials/fields/generic.html.twig' %}
-
-        {# a field with passed in options #}
-        {% include '@bolt/_partials/fields/generic.html.twig' with {
-            'name': 'foo',
-            'id': 'bar',
-            'value': "FooBar",
-            'label': 'A dummy Field',
-            'placeholder': 'Just a dummy field'
-        } %}
-
-        {# fields from a contenttype #}
-        {% setcontent record = 'homepage' returnsingle %}
-        {% for key, fieldDefinition in record.definition.fields.slice(0,3) %}
-
-            {% set field = record.field(key) %}
-
-            {% include [
-                '@bolt/_partials/fields/' ~ field.definition.type ~ '.html.twig',
-                '@bolt/_partials/fields/generic.html.twig'
-                ] with { 'field' : field } %}
-
-        {% endfor %}
-
-        {# @todo Add more fields #}
-        </form>
-
-        <hr>
-    </section>
-
 {% endblock main %}
+
+{% block aside %}
+
+{% endblock %}
