--- a/assets/scss/init/_base.scss
+++ b/assets/scss/init/_base.scss
@@ -3,13 +3,13 @@
 html,
 body {
   margin: 0;
-  height: 100%;
+  height: 100vh;
+  color: var(--body);
+  background: var(--background);
 }
 
 body {
-  color: var(--body);
-  background: var(--background);
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 label {
