--- a/assets/scss/init/_variables.scss
+++ b/assets/scss/init/_variables.scss
@@ -60,7 +60,7 @@ $success: #61A31F;
 $info: #17A2B8;
 $warning: #FFC107;
 $danger: #DB2427;
-$light: #EEE;
+$light: #E8E8E8;
 $dark: #333;
 
 // Grid
