--- a/assets/scss/init/init.scss
+++ b/assets/scss/init/init.scss
@@ -8,6 +8,6 @@
 @import '_fonts';
 
 // Font Awesome
-@import '../../node_modules/@fortawesome/fontawesome-free/css/fontawesome.css';
-@import '../../node_modules/@fortawesome/fontawesome-free/css/regular.css';
-@import '../../node_modules/@fortawesome/fontawesome-free/css/solid.css';
+@import '~@fortawesome/fontawesome-free/css/fontawesome.css';
+@import '~@fortawesome/fontawesome-free/css/regular.css';
+@import '~@fortawesome/fontawesome-free/css/solid.css';
