--- a/assets/scss/init/_variables.scss
+++ b/assets/scss/init/_variables.scss
@@ -14,7 +14,7 @@ $big-z-index: 1000;
 $font-family-base:              -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 $headings-font-family:          'Source Sans Variable', sans-serif;
 
-$font-size-base:                0.85rem;
+$font-size-base:                0.9rem;
 
 $h1-font-size:                $font-size-base * 2.5;
 $h2-font-size:                $font-size-base * 2;
@@ -84,6 +84,8 @@ $modal-dialog-margin-y-sm-up: 4rem;
 :root {
   --background: #f3f5f7;
   --foreground: #FFF;
+  --primary: #255687;
+  --shade: #666;
   --status-published: #08b883;
   --status-draft: #1078da;
   --status-held: #dd2443;
